tests/core/snapshots/test-grpc.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema
  @server(port: 8000)
  @upstream(batch: {delay: 10, headers: [], maxSize: 1000})
  @link(id: "news", src: "news.proto", type: Protobuf)
  @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

input NewsInput {
  body: String
  id: Int
  postImage: String
  title: String
}

type News {
  body: String!
  id: Int!
  postImage: String!
  title: String!
}

type NewsData {
  news: [News]
}

type Query {
  news: NewsData! @grpc(url: "http://localhost:50051", method: "news.NewsService.GetAllNews")
  newsById(news: NewsInput!): News!
    @grpc(url: "http://localhost:50051", body: "{{.args.news}}", method: "news.NewsService.GetNews")
  newsByIdBatch(news: NewsInput!): News!
    @grpc(
      url: "http://localhost:50051"
      body: "{{.args.news}}"
      batchKey: ["news", "id"]
      method: "news.NewsService.GetMultipleNews"
    )
}
